# rustcast

./: Cargo.toml  Makefile
.github/workflows/: rust.yml
migrations/: Cargo.toml  Makefile
migrations/src/: lib.rs  m22062024_000001_create_episode_table.rs  m22062024_000001_create_podcast_table.rs  m26102024_000001_create_episode_state.rs
src/: data_provider.rs  error.rs  main.rs  player.rs  podcasts_model.rs  utils.rs
src/entity/: episode.rs  episode_state.rs  mod.rs  podcast.rs  prelude.rs
src/traits/: episode_traits.rs  mod.rs
src/widgets/: timeline.rs
