[package]
name = "rustcast"
version = "0.0.1"
edition = "2021"

[workspace]
members = [".", "migrations"]

[dependencies]
egui = "0.27.2"
eframe = "0.27.2"
egui_extras = "0.27.2"
env_logger = "0.11.3"
log = "0.4.22"
ureq = "2.9.7"
url2audio = "0.2.2"
crossbeam = "0.8.4"
sea-orm = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }

[profile.dev]
opt-level = 1
