[package]
name = "rustcast"
version = "0.0.1"
edition = "2021"

[workspace]
members = [".", "migrations"]

[dependencies]
tokio = { version = "1.39.0", features = ["full"] }
egui = "0.28.1"
eframe = "0.27.2"
egui_extras = "0.27.2"
env_logger = "0.11.3"
log = "0.4.22"
ureq = "2.9.7"
url2audio = "0.2.2"
sea-orm = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
rss = "2.0.8"
instant = "0.1.13"
puffin_egui = "0.29.0"
puffin = "0.19.1"
puffin_http = "0.16.1"

[profile.dev]
opt-level = 1
