[package]
name = "rustcast"
version = "0.0.1"
edition = "2021"

[workspace]
members = [".", "migrations"]

[dependencies]
tokio = { version = "1.39.0", features = ["full"] }
egui = "0.28.1"
eframe = "0.27.2"
egui_extras = "0.27.2"
env_logger = "0.11.3"
log = "0.4.22"
ureq = "2.9.7"
url = "2.5.0"
url2audio = "0.2.2"
sea-orm = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
sea-orm-migration = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls" ] }
rss = "2.0.8"
migrations = { path = "migrations" }
egui-timeline-widget = "0.1.0"

[profile.dev]
opt-level = 1
