[package]
name = "migrations"
version = "0.1.0"
edition = "2021"

[lib]
name = "migrations"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
    "sqlx-sqlite",
    "runtime-async-std-native-tls"
]
